addons/traefik/traefik-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-traefik
  labels:
    app.kubernetes.io/name: ingress-traefik
    app.kubernetes.io/instance: ingress-traefik
