addons/traefik/traefik-ds.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: ingress-traefik
  labels:
    app.kubernetes.io/name: ingress-traefik
    app.kubernetes.io/instance: ingress-traefik
    app.kubernetes.io/component: controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-traefik
      app.kubernetes.io/instance: ingress-traefik
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-traefik
        app.kubernetes.io/instance: ingress-traefik
        app.kubernetes.io/component: controller
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v2.4
        name: controller
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: admin
          containerPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api.insecure
        - --api.dashboard
        - --entrypoints.web.address=:80
        - --providers.kubernetesingress
        - --providers.kubernetescrd
        - --serverstransport.insecureskipverify
        - --log.level=info
        - --ping
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /ping
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          requests:
            cpu: 500m
            memory: 90Mi
      nodeSelector:
        kubernetes.io/os: linux

---
kind: Service
apiVersion: v1
metadata:
  labels:
    app.kubernetes.io/name: ingress-traefik
    app.kubernetes.io/instance: ingress-traefik
  name: traefik-ingress-service
  namespace: ingress-traefik
spec:
  selector:
    app.kubernetes.io/name: ingress-traefik
    app.kubernetes.io/instance: ingress-traefik
    app.kubernetes.io/component: controller
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
